# onnxruntime_classification_image

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
src/: main.cpp
